sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: Boolean does not take parameters
    else  (plusPetit(i,i+1)){
                            ^